# beskar

./: .gitignore  Cargo.toml  LICENSE  README.md  arch.txt
.github/scripts/: bump_version.py
.github/workflows/: main.yml  release-old.yml  test.yml
src/: main.rs
src/db/: vectordb.rs
src/document/: loader.rs
src/init/: mod.rs
