[package]
name = "beskar"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "text"

[dependencies]
clap = { version = "4.5", features = ["derive"] }


[package.metadata.rpm]
package = "your-app-name"
release = "1"
summary = "Short description of what this tool does"

[package.metadata.rpm.targets]
your-app-name = { path = "/usr/bin/your-app-name" }
