[package]
name = "beskar"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Beskar is a Rust CLI tool"

[dependencies]
clap = { version = "4.5", features = ["derive"] }

[package.metadata.rpm]
name = "beskar"
release = "1"
summary = "Rust CLI tool"
description = "Beskar is a Rust-based command-line application."
license = "MIT"

[package.metadata.rpm.targets]
beskar = { path = "/usr/bin/beskar" }
